added ALL routes
